// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.client.parsers.products.get-matching-product-for-id-response should parse a GetMatchingProductForIdResponse with variation parents 1`] = `
{
  "getMatchingProductForIdResults": [
    {
      "error": null,
      "id": "B002KT3XRQ",
      "idType": "ASIN",
      "products": [
        {
          "attributes": {
            "binding": "Apparel",
            "brand": "Pearl iZUMi",
            "color": "Black",
            "department": "mens",
            "features": [
              "Ergonomic 6-panel design with 8 3/4" inseam",
              "Nylon / Lycra blend Sensor fabric",
              "Seamless Tour 3-D chamois pad",
              "Pearl Izumi leg gripper",
              "Quality, value and lifetime guarantee",
            ],
            "itemDimensions": {
              "height": {
                "unit": "inches",
                "value": 2,
              },
              "length": {
                "unit": "inches",
                "value": 9,
              },
              "weight": null,
              "width": {
                "unit": "inches",
                "value": 9,
              },
            },
            "label": "Pearl iZUMi",
            "listPrice": {
              "amount": 50,
              "currencyCode": "USD",
            },
            "manufacturer": "Pearl iZUMi",
            "model": "0275-21-LG",
            "packageDimensions": {
              "height": {
                "unit": "inches",
                "value": 2.2,
              },
              "length": {
                "unit": "inches",
                "value": 9.21,
              },
              "weight": {
                "unit": "pounds",
                "value": 0.4,
              },
              "width": {
                "unit": "inches",
                "value": 7.87,
              },
            },
            "packageQuantity": 1,
            "partNumber": "PZ0275021L",
            "productGroup": "Apparel",
            "productTypeName": "ABIS_SPORTS",
            "publisher": "Pearl iZUMi",
            "size": "Large",
            "smallImage": {
              "height": {
                "unit": "pixels",
                "value": 75,
              },
              "url": "http://ecx.images-amazon.com/images/I/41ty3Sn%2BU8L._SL75_.jpg",
              "width": {
                "unit": "pixels",
                "value": 58,
              },
            },
            "studio": "Pearl iZUMi",
            "title": "Pearl iZUMi Men's Quest Cycling Short,Black,Large",
          },
          "identifiers": {
            "marketplaceAsin": {
              "asin": "B002KT3XQM",
              "marketplaceId": "ATVPDKIKX0DER",
            },
            "skuIdentifier": null,
          },
          "offers": [],
          "relationships": {
            "variationChildren": [],
            "variationParent": {
              "identifiers": {
                "marketplaceAsin": {
                  "asin": "B002KT3XRQ",
                  "marketplaceId": "ATVPDKIKX0DER",
                },
                "skuIdentifier": null,
              },
            },
          },
          "salesRankings": [
            {
              "productCategoryId": "261874012",
              "rank": 90,
            },
            {
              "productCategoryId": "271578011",
              "rank": 3,
            },
            {
              "productCategoryId": "355562011",
              "rank": 1,
            },
            {
              "productCategoryId": "173516",
              "rank": 11,
            },
          ],
        },
      ],
      "status": "Success",
    },
  ],
  "responseMetadata": {
    "requestId": "b12caada-d330-4d87-a789-EXAMPLE35872",
  },
}
`;

exports[`lib.client.parsers.products.get-matching-product-for-id-response should parse the GetMatchingProductForIdResponse error example response from MWS doc 1`] = `
{
  "getMatchingProductForIdResults": [
    {
      "error": {
        "code": "InvalidParameterValue",
        "detail": null,
        "message": "Invalid ISBN identifier 0439708623 for marketplace ATVPDKIKX0DER",
        "type": "Sender",
      },
      "id": "0439708623",
      "idType": "ISBN",
      "products": [],
      "status": "ClientError",
    },
    {
      "error": null,
      "id": "9781933988665",
      "idType": "ISBN",
      "products": [
        {
          "attributes": {
            "authors": [
              "Marmanis, Haralambos",
              "Babenko, Dmitry",
            ],
            "binding": "Paperback",
            "brand": "Marmanis, Haralambos/ Babenko, Dmitry",
            "edition": "1",
            "itemDimensions": {
              "height": {
                "unit": "inches",
                "value": 9.25,
              },
              "length": {
                "unit": "inches",
                "value": 7.38,
              },
              "weight": {
                "unit": "pounds",
                "value": 1.38,
              },
              "width": {
                "unit": "inches",
                "value": 0.73,
              },
            },
            "label": "Manning Publications",
            "languages": [
              {
                "audioFormat": null,
                "name": "english",
                "type": "Published",
              },
              {
                "audioFormat": null,
                "name": "english",
                "type": "Original Language",
              },
              {
                "audioFormat": null,
                "name": "english",
                "type": "Unknown",
              },
            ],
            "listPrice": {
              "amount": 44.99,
              "currencyCode": "USD",
            },
            "manufacturer": "Manning Publications",
            "numberOfItems": 1,
            "numberOfPages": 368,
            "packageDimensions": {
              "height": {
                "unit": "inches",
                "value": 0.8,
              },
              "length": {
                "unit": "inches",
                "value": 9.1,
              },
              "weight": {
                "unit": "pounds",
                "value": 1.35,
              },
              "width": {
                "unit": "inches",
                "value": 7.3,
              },
            },
            "packageQuantity": 1,
            "partNumber": "9781933988665",
            "productGroup": "Book",
            "productTypeName": "ABIS_BOOK",
            "publicationDate": 2009-07-08T00:00:00.000Z,
            "publisher": "Manning Publications",
            "smallImage": {
              "height": {
                "unit": "pixels",
                "value": 75,
              },
              "url": "http://ecx.images-amazon.com/images/I/51EEz05N2HL._SL75_.jpg",
              "width": {
                "unit": "pixels",
                "value": 60,
              },
            },
            "studio": "Manning Publications",
            "title": "Algorithms of the Intelligent Web",
          },
          "identifiers": {
            "marketplaceAsin": {
              "asin": "1933988665",
              "marketplaceId": "ATVPDKIKX0DER",
            },
            "skuIdentifier": null,
          },
          "offers": [],
          "relationships": {
            "variationChildren": [],
            "variationParent": null,
          },
          "salesRankings": [
            {
              "productCategoryId": "book_display_on_website",
              "rank": 689405,
            },
            {
              "productCategoryId": "491298",
              "rank": 150,
            },
            {
              "productCategoryId": "3870",
              "rank": 375,
            },
            {
              "productCategoryId": "3887",
              "rank": 836,
            },
          ],
        },
      ],
      "status": "Success",
    },
  ],
  "responseMetadata": {
    "requestId": "a34b6cca-d7dc-4939-b226-b13ea3ac1d88",
  },
}
`;

exports[`lib.client.parsers.products.get-matching-product-for-id-response should parse the GetMatchingProductForIdResponse example response from MWS doc 1`] = `
{
  "getMatchingProductForIdResults": [
    {
      "error": null,
      "id": "9781933988665",
      "idType": "ISBN",
      "products": [
        {
          "attributes": {
            "authors": [
              "Marmanis, Haralambos",
              "Babenko, Dmitry",
            ],
            "binding": "Paperback",
            "edition": "1",
            "isEligibleForTradeIn": true,
            "itemDimensions": {
              "height": {
                "unit": "inches",
                "value": 9.17,
              },
              "length": {
                "unit": "inches",
                "value": 7.36,
              },
              "weight": {
                "unit": "pounds",
                "value": 1.4,
              },
              "width": {
                "unit": "inches",
                "value": 0.75,
              },
            },
            "label": "Manning Publications",
            "languages": [
              {
                "audioFormat": null,
                "name": "english",
                "type": "Unknown",
              },
              {
                "audioFormat": null,
                "name": "english",
                "type": "Original Language",
              },
              {
                "audioFormat": null,
                "name": "english",
                "type": "Published",
              },
            ],
            "listPrice": {
              "amount": 44.99,
              "currencyCode": "USD",
            },
            "manufacturer": "Manning Publications",
            "numberOfItems": 1,
            "numberOfPages": 368,
            "packageDimensions": {
              "height": {
                "unit": "inches",
                "value": 0.8,
              },
              "length": {
                "unit": "inches",
                "value": 9.1,
              },
              "weight": {
                "unit": "pounds",
                "value": 1.35,
              },
              "width": {
                "unit": "inches",
                "value": 7.3,
              },
            },
            "productGroup": "Book",
            "productTypeName": "ABIS_BOOK",
            "publicationDate": 2009-07-05T00:00:00.000Z,
            "publisher": "Manning Publications",
            "smallImage": {
              "height": {
                "unit": "pixels",
                "value": 75,
              },
              "url": "http://ecx.images-amazon.com/images/I/51EEz05N2HL._SL75_.jpg",
              "width": {
                "unit": "pixels",
                "value": 60,
              },
            },
            "studio": "Manning Publications",
            "title": "Algorithms of the Intelligent Web",
          },
          "identifiers": {
            "marketplaceAsin": {
              "asin": "1933988665",
              "marketplaceId": "ATVPDKIKX0DER",
            },
            "skuIdentifier": null,
          },
          "offers": [],
          "relationships": {
            "variationChildren": [],
            "variationParent": null,
          },
          "salesRankings": [
            {
              "productCategoryId": "book_display_on_website",
              "rank": 59485,
            },
            {
              "productCategoryId": "377886011",
              "rank": 32,
            },
            {
              "productCategoryId": "3887",
              "rank": 66,
            },
            {
              "productCategoryId": "3870",
              "rank": 82,
            },
          ],
        },
      ],
      "status": "Success",
    },
    {
      "error": null,
      "id": "0439708184",
      "idType": "ISBN",
      "products": [
        {
          "attributes": {
            "authors": [
              "Rowling, J.K.",
            ],
            "binding": "Paperback",
            "brand": "Scholastic Press",
            "creators": [
              {
                "name": "GrandPrÃ©, Mary",
                "role": "Illustrator",
              },
            ],
            "edition": "1st",
            "features": [
              "Recommended Age: 9 years and up",
            ],
            "isAutographed": false,
            "isMemorabilia": false,
            "itemDimensions": {
              "height": {
                "unit": "inches",
                "value": 0.8,
              },
              "length": {
                "unit": "inches",
                "value": 7.5,
              },
              "weight": {
                "unit": "pounds",
                "value": 0.5,
              },
              "width": {
                "unit": "inches",
                "value": 5.2,
              },
            },
            "label": "Scholastic Paperbacks",
            "languages": [
              {
                "audioFormat": null,
                "name": "english",
                "type": "Unknown",
              },
              {
                "audioFormat": null,
                "name": "english",
                "type": "Original Language",
              },
              {
                "audioFormat": null,
                "name": "english",
                "type": "Published",
              },
            ],
            "listPrice": {
              "amount": 10.99,
              "currencyCode": "USD",
            },
            "manufacturer": "Scholastic Paperbacks",
            "numberOfItems": 1,
            "numberOfPages": 320,
            "packageDimensions": {
              "height": {
                "unit": "inches",
                "value": 1,
              },
              "length": {
                "unit": "inches",
                "value": 7.5,
              },
              "weight": {
                "unit": "pounds",
                "value": 0.5,
              },
              "width": {
                "unit": "inches",
                "value": 5.2,
              },
            },
            "packageQuantity": 1,
            "partNumber": "9780590353427",
            "productGroup": "Book",
            "productTypeName": "ABIS_BOOK",
            "publicationDate": 1999-10-01T00:00:00.000Z,
            "publisher": "Scholastic Paperbacks",
            "releaseDate": 1999-09-08T00:00:00.000Z,
            "smallImage": {
              "height": {
                "unit": "pixels",
                "value": 75,
              },
              "url": "http://ecx.images-amazon.com/images/I/51MU5VilKpL._SL75_.jpg",
              "width": {
                "unit": "pixels",
                "value": 51,
              },
            },
            "studio": "Scholastic Paperbacks",
            "title": "Harry Potter and the Sorcerer's Stone (Book 1)",
          },
          "identifiers": {
            "marketplaceAsin": {
              "asin": "059035342X",
              "marketplaceId": "ATVPDKIKX0DER",
            },
            "skuIdentifier": null,
          },
          "offers": [],
          "relationships": {
            "variationChildren": [],
            "variationParent": null,
          },
          "salesRankings": [
            {
              "productCategoryId": "book_display_on_website",
              "rank": 362,
            },
            {
              "productCategoryId": "15356791",
              "rank": 6,
            },
            {
              "productCategoryId": "3153",
              "rank": 9,
            },
            {
              "productCategoryId": "3045",
              "rank": 14,
            },
          ],
        },
        {
          "attributes": {
            "authors": [
              "J.K. Rowling, Mary GrandPrÃƒÂ©",
            ],
            "binding": "Paperback",
            "label": "Scholastic Paperbacks",
            "languages": [
              {
                "audioFormat": null,
                "name": "english",
                "type": "Unknown",
              },
              {
                "audioFormat": null,
                "name": "english",
                "type": "Published",
              },
            ],
            "manufacturer": "Scholastic Paperbacks",
            "numberOfItems": 1,
            "numberOfPages": 784,
            "packageDimensions": {
              "height": {
                "unit": "inches",
                "value": 0.73,
              },
              "length": {
                "unit": "inches",
                "value": 8.43,
              },
              "weight": {
                "unit": "pounds",
                "value": 0.79,
              },
              "width": {
                "unit": "inches",
                "value": 5.85,
              },
            },
            "productGroup": "Book",
            "productTypeName": "BOOKS_1973_AND_LATER",
            "publicationDate": 1999-09-08T00:00:00.000Z,
            "publisher": "Scholastic Paperbacks",
            "smallImage": {
              "height": {
                "unit": "pixels",
                "value": 75,
              },
              "url": "http://ecx.images-amazon.com/images/I/51STfI7UiCL._SL75_.jpg",
              "width": {
                "unit": "pixels",
                "value": 52,
              },
            },
            "studio": "Scholastic Paperbacks",
            "title": "Harry Potter and the Sorcerer's Stone",
          },
          "identifiers": {
            "marketplaceAsin": {
              "asin": "0439708184",
              "marketplaceId": "ATVPDKIKX0DER",
            },
            "skuIdentifier": null,
          },
          "offers": [],
          "relationships": {
            "variationChildren": [],
            "variationParent": null,
          },
          "salesRankings": [
            {
              "productCategoryId": "book_display_on_website",
              "rank": 2091024,
            },
          ],
        },
      ],
      "status": "Success",
    },
  ],
  "responseMetadata": {
    "requestId": "7ba3245e-a213-430a-bea9-EXAMPLE38d76",
  },
}
`;

exports[`lib.client.parsers.products.get-matching-product-for-id-response should parse the GetMatchingProductResponse (modified) example response from MWS doc 1`] = `
{
  "getMatchingProductForIdResults": [
    {
      "error": null,
      "id": "B002KT3XRQ",
      "idType": "ASIN",
      "products": [
        {
          "attributes": {
            "binding": "Apparel",
            "brand": "Pearl iZUMi",
            "department": "mens",
            "features": [
              "Select transfer fabric sets the benchmark for moisture transfer and
                    four-way performance stretch",
              "6-Panel anatomic design for superior, chafe-free comfort, UPF 50+ sun
                    protection",
              "Comfortable silicone leg grippers keep shorts in place,
                    moisture-wicking, antimicrobial properties",
              "Tour 3D Chamois is male-specific and non-chafing with padding in
                    key areas",
              "86 percent nylon, 14% spandex, 9-Inch inseam",
            ],
            "itemDimensions": {
              "height": {
                "unit": "inches",
                "value": 2,
              },
              "length": {
                "unit": "inches",
                "value": 9,
              },
              "weight": null,
              "width": {
                "unit": "inches",
                "value": 9,
              },
            },
            "label": "Pearl iZUMi",
            "listPrice": {
              "amount": 50,
              "currencyCode": "USD",
            },
            "manufacturer": "Pearl iZUMi",
            "model": "0275",
            "packageDimensions": {
              "height": {
                "unit": "inches",
                "value": 2.8,
              },
              "length": {
                "unit": "inches",
                "value": 9.75,
              },
              "weight": {
                "unit": "pounds",
                "value": 0.4,
              },
              "width": {
                "unit": "inches",
                "value": 8.4,
              },
            },
            "packageQuantity": 1,
            "partNumber": "0275",
            "productGroup": "Apparel",
            "productTypeName": "SHORTS",
            "publisher": "Pearl iZUMi",
            "smallImage": {
              "height": {
                "unit": "pixels",
                "value": 75,
              },
              "url": "http://ecx.images-amazon.com/images/I/41ty3Sn%2BU8L._SL75_.jpg",
              "width": {
                "unit": "pixels",
                "value": 58,
              },
            },
            "studio": "Pearl iZUMi",
            "title": "Pearl iZUMi Men's Quest Cycling Short",
          },
          "identifiers": {
            "marketplaceAsin": {
              "asin": "B002KT3XRQ",
              "marketplaceId": "ATVPDKIKX0DER",
            },
            "skuIdentifier": null,
          },
          "offers": [],
          "relationships": {
            "variationChildren": [
              {
                "color": "Black",
                "identifiers": {
                  "marketplaceAsin": {
                    "asin": "B002KT3XQC",
                    "marketplaceId": "ATVPDKIKX0DER",
                  },
                  "skuIdentifier": null,
                },
                "size": "Small",
              },
              {
                "color": "Black",
                "identifiers": {
                  "marketplaceAsin": {
                    "asin": "B002KT3XQW",
                    "marketplaceId": "ATVPDKIKX0DER",
                  },
                  "skuIdentifier": null,
                },
                "size": "Medium",
              },
              {
                "color": "Black",
                "identifiers": {
                  "marketplaceAsin": {
                    "asin": "B002KT3XQM",
                    "marketplaceId": "ATVPDKIKX0DER",
                  },
                  "skuIdentifier": null,
                },
                "size": "Large",
              },
              {
                "color": "Black",
                "identifiers": {
                  "marketplaceAsin": {
                    "asin": "B002KT3XR6",
                    "marketplaceId": "ATVPDKIKX0DER",
                  },
                  "skuIdentifier": null,
                },
                "size": "X-Large",
              },
              {
                "color": "Black",
                "identifiers": {
                  "marketplaceAsin": {
                    "asin": "B002KT3XRG",
                    "marketplaceId": "ATVPDKIKX0DER",
                  },
                  "skuIdentifier": null,
                },
                "size": "XX-Large",
              },
            ],
            "variationParent": null,
          },
          "salesRankings": [
            {
              "productCategoryId": "apparel_display_on_website",
              "rank": 159,
            },
            {
              "productCategoryId": "2420095011",
              "rank": 1,
            },
            {
              "productCategoryId": "2611189011",
              "rank": 4,
            },
          ],
        },
      ],
      "status": "Success",
    },
  ],
  "responseMetadata": {
    "requestId": "b12caada-d330-4d87-a789-EXAMPLE35872",
  },
}
`;
